--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,18 @@
 language: r
-sudo: required
 cache: packages
+
 warnings_are_errors: false
+
 apt_packages:
   - libudunits2-dev
+
 r_packages:
   - covr
-after_success:
-  - Rscript -e 'library(covr); codecov()'
+  
+matrix:
+  include:
+  - r: devel
+  - r: release
+    after_success:
+    - Rscript -e 'covr::codecov()'
+  - r: oldrel
