--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,16 +8,16 @@ Authors@R: c(
              email = 'guiastrennec@gmail.com'),
       person('Andrew C.', 'Hooker', 
              role  = c('aut', 'cph'),
-             email = 'andrew.hooker@farmbio.uu.se'),
+             email = 'andrew.hooker@farmaci.uu.se'),
       person('Sebastian', 'Ueckert',
              role  = c('aut', 'cph'),
-             email = 'sebastian.ueckert@farmbio.uu.se'),
+             email = 'sebastian.ueckert@farmaci.uu.se'),
       person('Mike K.', 'Smith', 
              role  = 'ctb',
              email = 'mike.k.smith@pfizer.com'),
       person('Mats O.', 'Karlsson',
              role  = c('aut', 'cph'),
-             email = 'mats.karlsson@farmbio.uu.se'))
+             email = 'mats.karlsson@farmaci.uu.se'))
 Description: Diagnostics for non-linear mixed-effects (population) 
     models from 'NONMEM' <https://www.iconplc.com/innovation/nonmem/>. 
     'xpose' facilitates data import, creation of numerical run summary 
