Try fixing coverage again...

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,8 +47,7 @@ Suggests:
   testthat,
   plotly,
   webshot,
-  mvtnorm,
-  covr
+  mvtnorm
 License: LGPL-3
 URL: https://github.com/UUPharmacometrics/xpose
 BugReports: https://github.com/UUPharmacometrics/xpose/issues
