--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -49,7 +49,7 @@ Suggests:
   webshot,
   mvtnorm
 License: LGPL-3
-URL: https://github.com/UUPharmacometrics/xpose
+URL: https://uupharmacometrics.github.io/xpose, https://github.com/UUPharmacometrics/xpose
 BugReports: https://github.com/UUPharmacometrics/xpose/issues
 Encoding: UTF-8
 LazyData: true
