--- a/NAMESPACE
+++ b/NAMESPACE
@@ -159,3 +159,4 @@ importFrom(ggforce,facet_grid_paginate)
 importFrom(ggforce,facet_wrap_paginate)
 importFrom(purrr,"%>%")
 importFrom(rlang,":=")
+importFrom(rlang,.data)
