New exported functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,9 @@ S3method(summary,xpose_data)
 S3method(ungroup,xpose_data)
 export("%>%")
 export(absval_res_vs_idv)
+export(absval_res_vs_ipred)
 export(absval_res_vs_pred)
+export(absval_res_vs_tad)
 export(add_facet_var)
 export(aes_c)
 export(aes_filter)
@@ -24,6 +26,7 @@ export(all_data_problem)
 export(all_file_problem)
 export(amt_vs_idv)
 export(append_suffix)
+export(apply_formats)
 export(as.ctime)
 export(as.nm.table.list)
 export(as.xpdb)
@@ -62,6 +65,10 @@ export(get_prm)
 export(get_prm_transformation_formulas)
 export(get_special)
 export(get_summary)
+export(get_var_labels)
+export(get_var_labels_units)
+export(get_var_types)
+export(get_var_units)
 export(grab_iter)
 export(grd_vs_iteration)
 export(group_by)
@@ -111,9 +118,12 @@ export(reorder_factors)
 export(res_distrib)
 export(res_qq)
 export(res_vs_idv)
+export(res_vs_ipred)
 export(res_vs_pred)
+export(res_vs_tad)
 export(select)
 export(set_var_labels)
+export(set_var_labels_units)
 export(set_var_types)
 export(set_var_units)
 export(slice)
